<resources>
    <string name="app_name">Guess \'Em All</string>
    <string name="btn_start_txt">Guess a Pokémon</string>
    <string name="btn_daily_txt">Daily Guess</string>
    <string name="str_daily_done">Come back tomorrow for another Daily Guess!</string>
    <string name="btn_pokedex_txt">Pokédex</string>
    <string name="btn_stats_txt">Game Statistics</string>
    <string name="game_et_pokemon_hint">Pokémon Name</string>
    <string name="game_btn_guess_pokemon">Guess Pokémon</string>
    <string name="game_label_gen">Generation</string>
    <string name="game_label_t1">Type 1</string>
    <string name="game_label_t2">Type 2</string>
    <string name="game_label_evo">Evolution</string>
    <string name="game_label_guess_part">Guess the Pokémon\'s </string>
    <string name="game_btn_guess_gen">Guess Generation</string>
    <string name="game_btn_guess_t1">Guess Type 1</string>
    <string name="game_btn_guess_t2">Guess Type 2</string>
    <string name="game_btn_guess_evo">Guess Evolution</string>
    <string name="pokeentry_label_type">Type</string>
    <string name="pokeentry_label_height">Height</string>
    <string name="pokeentry_label_weight">Weight</string>
    <string name="total_games">Total Games</string>
    <string name="best_time">Best Time</string>
    <string name="total_play_time">Total Play Time</string>
    <string name="average_game_time">Average Game Time</string>
    <string name="slowest_time">Slowest Time</string>
    <string name="placeholder">----</string>
    <string name="game_statistics">Game Statistics</string>
    <string name="fastest_found_pokemon">Fastest Found Pokemon</string>
    <string name="slowest_found_pokemon">Slowest Found Pokemon</string>
    <string name="how_to_play1">Guess a Pokémon correctly to catch it.</string>
    <string name="how_to_play2">Gain hints by guessing the Pokémon\'s generation, types, and evolution stage.</string>
    <string name="how_to_play3">View all your caught Pokémon in your Pokédex!</string>
    <string name="how_to_play4">Tap a Pokémon to view its Pokédex entry.</string>
    <string name="how_to_play5">Your gameplay statistics can be viewed on the Game Statistics page.</string>
    <string-array name="generations_array">
        <item>Gen I: Red/Blue/Yellow</item>
        <item>Gen II: Gold/Silver/Crystal</item>
        <item>Gen III: Ruby/Sapphire/Emerald</item>
        <item>Gen IV: Diamond/Pearl/Platinum</item>
        <item>Gen V: Black/White</item>
        <item>Gen VI: X/Y</item>
        <item>Gen VII: Sun/Moon</item>
        <item>Gen VIII: Sword/Shield</item>
    </string-array>
    <string-array name="type_array">
        <item>None</item>
        <item>Normal</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Grass</item>
        <item>Electric</item>
        <item>Ice</item>
        <item>Fighting</item>
        <item>Poison</item>
        <item>Ground</item>
        <item>Flying</item>
        <item>Psychic</item>
        <item>Bug</item>
        <item>Rock</item>
        <item>Ghost</item>
        <item>Dark</item>
        <item>Dragon</item>
        <item>Steel</item>
        <item>Fairy</item>
    </string-array>
    <string-array name="evolution_array">
        <item>None</item>
        <item>Stage 1</item>
        <item>Stage 2</item>
        <item>Stage 3</item>
    </string-array>
</resources>