<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<androidx.constraintlayout.widget.ConstraintLayout
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Game">

    <ImageView
        android:id="@+id/imgGuessPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvAutoComplete_Pokemon"
        app:srcCompat="@drawable/logo" />

    <AutoCompleteTextView
        android:id="@+id/tvAutoComplete_Pokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/game_et_pokemon_hint"
        app:layout_constraintTop_toBottomOf="@id/imgGuessPokemon"
        app:layout_constraintBottom_toTopOf="@id/btnGuessPokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGuessPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_btn_guess_pokemon"
        app:layout_constraintTop_toBottomOf="@id/tvAutoComplete_Pokemon"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnGuessPokemon"
        app:layout_constraintBottom_toTopOf="@id/imgGuessGen"/>

    <ImageView
        android:id="@+id/imgGuessGen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/imgGuessType1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:srcCompat="@drawable/question_ball" />

    <TextView
        android:id="@+id/tvGuessGen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_label_gen"
        app:layout_constraintTop_toBottomOf="@id/imgGuessGen"
        app:layout_constraintStart_toStartOf="@id/imgGuessGen"
        app:layout_constraintEnd_toEndOf="@id/imgGuessGen" />

    <ImageView
        android:id="@+id/imgGuessType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toEndOf="@id/imgGuessGen"
        app:layout_constraintEnd_toStartOf="@+id/imgGuessType2"
        app:srcCompat="@drawable/question_ball" />

    <TextView
        android:id="@+id/tvGuessType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_label_t1"
        app:layout_constraintTop_toBottomOf="@id/imgGuessType1"
        app:layout_constraintStart_toStartOf="@id/imgGuessType1"
        app:layout_constraintEnd_toEndOf="@id/imgGuessType1" />

    <ImageView
        android:id="@+id/imgGuessType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toEndOf="@id/imgGuessType1"
        app:layout_constraintEnd_toStartOf="@+id/imgGuessEvo"
        app:srcCompat="@drawable/question_ball" />

    <TextView
        android:id="@+id/tvGuessType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_label_t2"
        app:layout_constraintTop_toBottomOf="@id/imgGuessType2"
        app:layout_constraintStart_toStartOf="@id/imgGuessType2"
        app:layout_constraintEnd_toEndOf="@id/imgGuessType2" />

    <ImageView
        android:id="@+id/imgGuessEvo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toEndOf="@id/imgGuessType2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/question_ball" />

    <TextView
        android:id="@+id/tvGuessEvo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_label_evo"
        app:layout_constraintTop_toBottomOf="@id/imgGuessEvo"
        app:layout_constraintStart_toStartOf="@id/imgGuessEvo"
        app:layout_constraintEnd_toEndOf="@id/imgGuessEvo" />

    <TextView
        android:id="@+id/tvGuessLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_label_guess_part"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tvGuessGen"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvCurrentGuessLabel" />

    <TextView
        android:id="@+id/tvCurrentGuessLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_label_gen"
        app:layout_constraintBaseline_toBaselineOf="@id/tvGuessLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvGuessLabel" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvGuessLabel"
        app:layout_constraintBottom_toTopOf="@id/btnGuessPart"/>

    <Button
        android:id="@+id/btnGuessPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_btn_guess_gen"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>